[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/creatures/flying_skull/FlyingSkull.gd" type="Script" id=1]
[ext_resource path="res://assets/models/skull01.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/textures_and_materials/bone_1.tres" type="Material" id=3]

[sub_resource type="SphereShape" id=3]
radius = 0.13

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Model" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.968143, -0.250397, 0, 0.250397, 0.968143, -0.05, 1.75, 0.016 )
mesh = ExtResource( 2 )
software_skinning_transform_normals = false
material/0 = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.968143, -0.250397, 0, 0.250397, 0.968143, 0.001, 1.75, 0 )
shape = SubResource( 3 )

[node name="Timer2" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
